procurementrequest/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: procurementrequest
  namespace: procurement
  labels:
    app: procurementrequest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: procurementrequest
  template:
    metadata:
      labels:
        app: procurementrequest
    spec:
      containers:
        - name: procurementrequest
          image: procurementacr.azurecr.io/procurementrequest:v2
          imagePullSecrets:
            - name: regcred
          ports:
            - containerPort: 8080
