procurementrequest/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: procurementrequest
  labels:
    app: procurementrequest
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: procurementrequest
